{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "RightHand",
            "id": "c73137e7-26b9-44f8-85a5-9fe63480c10d",
            "actions": [
                {
                    "name": "HandPosition",
                    "type": "Value",
                    "id": "38ccd479-5328-4049-b2ff-8407d6251d64",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "11f221d9-4a5d-4268-8d97-0939d3ceb672",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Mouse Vector 3",
                    "id": "b9ca3100-8c49-4fcc-89fc-5c6b2e587e3f",
                    "path": "MouseVector3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandPosition",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "x",
                    "id": "43d27768-f22b-4c27-8ee5-8f7c2471e3f9",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "Invert,Scale(factor=2)",
                    "groups": "KeyboardAndMouse",
                    "action": "HandPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "y",
                    "id": "a4c4b291-8073-4a02-a671-7a9572881381",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Scale(factor=0.4)",
                    "groups": "KeyboardAndMouse",
                    "action": "HandPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "z",
                    "id": "d79be8d3-99c4-43cc-ac1b-ab589a539495",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "Invert,Scale(factor=2)",
                    "groups": "KeyboardAndMouse",
                    "action": "HandPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3de197a3-1439-4b92-884c-a49a53226a38",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LeftHand",
            "id": "8e43aa59-5342-4ece-a235-5267d5284e80",
            "actions": [
                {
                    "name": "HandPosition",
                    "type": "Value",
                    "id": "1f1e913b-00e8-4eac-894a-b9bc620f4bb2",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "1aa6bb80-e77e-49ba-8b2d-a939a603fe37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "808102db-cbfd-4720-b7d3-59afd8f025a1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "26154559-86f0-4bf3-a229-2b96ec041b61",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "InvertVector3,ScaleVector3(x=10,y=10,z=10)",
                    "groups": "",
                    "action": "HandPosition",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "31ddeb08-16a7-4785-bfb1-677e7944ff47",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "HandPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b9cda330-1541-43ba-989c-5832f39c43cf",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "HandPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "de800c44-486e-4d66-8e40-495914f4f382",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "HandPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "549f3c42-e865-4a8c-936b-34b1281975e7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "HandPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "2c1d012f-c8a0-43b8-9942-c860058e3e6f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "HandPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "adec86e9-5c0a-4e70-9e11-c47e86116e2a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "HandPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}